# logistics-app

./: .env.local  .env.template  .eslintrc.js  .gitignore  .prettierrc.yaml  BUILD  LICENSE  Makefile  README.md  WORKSPACE  docker-compose.yml  go.mod  go.sum  go_third_party.bzl  package.json  tsconfig.json
backend/collections/: Deliveries.postman_collection.json  Drivers.postman_collection.json
backend/lib/constants/: BUILD.bazel
backend/lib/database/: BUILD.bazel
backend/lib/errors/: BUILD.bazel  errors.go
backend/lib/middlewares/auth/: BUILD.bazel  auth.go
backend/lib/middlewares/cors/: BUILD.bazel  cors.go
backend/lib/middlewares/json/: BUILD.bazel
backend/lib/middlewares/restrictions/: BUILD.bazel  restrictions.go
backend/migrations/: 20220328164228_initial.down.sql
backend/services/addresses/: BUILD.bazel  main.go
backend/services/addresses/app/: BUILD.bazel  app.go
backend/services/addresses/app/service/: BUILD.bazel  service.go
backend/services/addresses/app/transport/: BUILD.bazel  transport.go
backend/services/addresses/config/: BUILD.bazel
backend/services/admins/: BUILD.bazel  main.go
backend/services/admins/app/: BUILD.bazel  app.go
backend/services/admins/app/service/: BUILD.bazel  service.go
backend/services/admins/config/: BUILD.bazel
backend/services/auth/: BUILD.bazel  main.go
backend/services/auth/app/: BUILD.bazel
backend/services/auth/app/constants/: BUILD.bazel  constants.go
backend/services/auth/app/service/: BUILD.bazel  service.go
backend/services/auth/app/transport/: BUILD.bazel  transport.go
backend/services/auth/config/: BUILD.bazel  config.go
backend/services/deliveries/: BUILD.bazel  main.go
backend/services/deliveries/app/: BUILD.bazel  app.go
backend/services/deliveries/app/constants/: BUILD.bazel
backend/services/deliveries/app/service/: BUILD.bazel  service.go
backend/services/deliveries/app/transport/: BUILD.bazel  transport.go
backend/services/deliveries/config/: BUILD.bazel  config.go
backend/services/drivers/: BUILD.bazel  main.go
backend/services/drivers/app/: BUILD.bazel  app.go
backend/services/drivers/config/: BUILD.bazel  config.go
backend/services/managers/: BUILD.bazel  main.go
backend/services/managers/app/: BUILD.bazel
backend/services/managers/app/service/: BUILD.bazel  service.go
backend/services/managers/app/transport/: BUILD.bazel  transport.go
backend/services/managers/config/: BUILD.bazel
backend/services/vehicles/: BUILD.bazel  main.go
backend/services/vehicles/app/: BUILD.bazel  app.go
backend/services/vehicles/app/service/: BUILD.bazel  service.go
backend/services/vehicles/app/transport/: BUILD.bazel  transport.go
backend/services/vehicles/config/: BUILD.bazel
collections/: Addresses.postman_collection.json  Admins.postman_collection.json  Auth.postman_collection.json  Managers.postman_collection.json  Vehicles.postman_collection.json
database/testdata/: testdata.sql
frontend/: index.html  package.json  tsconfig.json
frontend/src/main/: main.ts
frontend/src/renderer/: App.tsx  index.tsx  store.tsx  theme.tsx
frontend/src/renderer/clients/: base.client.tsx  index.tsx
frontend/src/renderer/components/: App.tsx  index.tsx
frontend/src/renderer/configuration/: index.tsx
frontend/webpack/: electron.webpack.ts  react.webpack.ts
lib/constants/: BUILD.bazel  constants.go
lib/database/: BUILD.bazel
lib/errors/: BUILD.bazel  errors.go
lib/middlewares/auth/: BUILD.bazel  auth.go
lib/middlewares/auth/models/: BUILD.bazel
lib/middlewares/json/: BUILD.bazel  json.go
lib/middlewares/restrictions/: BUILD.bazel  restrictions.go
migrations/: 20220328164228_initial.down.sql  20220328164228_initial.up.sql
services/addresses/: BUILD.bazel  main.go
services/addresses/app/: BUILD.bazel  app.go
services/addresses/app/config/: BUILD.bazel  config.go
services/addresses/app/database/: BUILD.bazel  database.go
services/addresses/app/service/: BUILD.bazel  service.go
services/addresses/app/transport/: BUILD.bazel  transport.go
services/addresses/config/: BUILD.bazel  config.go
services/admins/: BUILD.bazel  main.go
services/admins/app/: BUILD.bazel  app.go
services/admins/app/service/: BUILD.bazel  service.go
services/admins/app/transport/: BUILD.bazel  transport.go
services/admins/config/: BUILD.bazel  config.go
services/auth/: BUILD.bazel  main.go
services/auth/app/: BUILD.bazel  app.go
services/auth/app/constants/: BUILD.bazel
services/auth/app/service/: BUILD.bazel  service.go
services/auth/app/transport/: BUILD.bazel  transport.go
services/auth/config/: BUILD.bazel
services/deliveries/: BUILD.bazel  main.go
services/deliveries/app/: BUILD.bazel  app.go
services/deliveries/app/constants/: BUILD.bazel  constants.go
services/deliveries/app/service/: BUILD.bazel  service.go
services/deliveries/app/transport/: BUILD.bazel  transport.go
services/deliveries/config/: BUILD.bazel
services/drivers/: BUILD.bazel  main.go
services/drivers/app/: BUILD.bazel  app.go
services/drivers/app/config/: BUILD.bazel
services/drivers/app/service/: BUILD.bazel  service.go
services/drivers/app/transport/: BUILD.bazel  transport.go
services/drivers/config/: BUILD.bazel
services/initial/: BUILD.bazel  main.go
services/initial/server/: BUILD.bazel  server.go
services/managers/: BUILD.bazel  main.go
services/managers/app/: BUILD.bazel  app.go
services/managers/app/config/: BUILD.bazel  config.go
services/managers/app/middleware/: BUILD.bazel  middleware.go
services/managers/app/service/: BUILD.bazel  service.go
services/managers/app/transport/: BUILD.bazel  transport.go
services/managers/config/: BUILD.bazel
services/vehicles/: BUILD.bazel  main.go
services/vehicles/app/: BUILD.bazel  app.go
services/vehicles/app/config/: BUILD.bazel  config.go
services/vehicles/app/database/: BUILD.bazel  database.go
services/vehicles/app/service/: BUILD.bazel  service.go
services/vehicles/app/transport/: BUILD.bazel  transport.go
services/vehicles/config/: BUILD.bazel
(+73 files in other folders)
