load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "deliveries_lib",
    srcs = ["main.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/services/deliveries",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/database",
        "//services/deliveries/app/service",
        "//services/deliveries/app/transport",
        "//services/deliveries/config",
        "@com_github_spf13_viper//:viper",
    ],
)

go_binary(
    name = "deliveries",
    embed = [":deliveries_lib"],
    visibility = ["//visibility:public"],
)
