load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "deliveries_lib",
    srcs = ["main.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/services/deliveries",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/database",
        "//services/deliveries/app/service",
        "//services/deliveries/app/transport",
        "//services/deliveries/config",
        "@com_github_spf13_viper//:viper",
    ],
)

go_binary(
    name = "deliveries",
    embed = [":deliveries_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_docker_image",
    embed = [":deliveries_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

container_image(
    name = "docker",
    base = ":go_docker_image",
)
