load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "drivers_lib",
    srcs = ["main.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/services/drivers",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/database",
        "//services/drivers/app/service",
        "//services/drivers/app/transport",
        "//services/drivers/config",
        "@com_github_spf13_viper//:viper",
    ],
)

go_binary(
    name = "drivers",
    embed = [":drivers_lib"],
    visibility = ["//visibility:public"],
)
