load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/services/initial",
    visibility = ["//visibility:private"],
    deps = ["//services/initial/server"],
)

go_binary(
    name = "initial",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_image(
    name = "base_image",
    embed = [":go_default_library"],
    goos = "darwin",
    goarch = "arm",
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = ":base_image",
    visibility = ["//visibility:public"],
)
