load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/grigoryevandrey/logistics-app",
    visibility = ["//visibility:private"],
    deps = ["//services/initial/server"],
)

go_binary(
    name = "initial",
    embed = [":initial_lib"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_image(
    name = "base_image",
    embed = [":go_default_library"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)

container_image(
    name = "image",
    base = ":base_image",
    env = {
        "var1": "lol",
    },
    ports = [
        "8080",
        "8080",
    ],
    visibility = ["//visibility:public"],
)

go_library(
    name = "initial_lib",
    srcs = ["main.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/services/initial",
    visibility = ["//visibility:private"],
    deps = ["//services/initial/server"],
)
