load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "managers_lib",
    srcs = ["main.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/services/managers",
    visibility = ["//visibility:private"],
    deps = [
        "//lib/database",
        "//services/managers/app/config",
        "//services/managers/app/service",
        "//services/managers/app/transport",
        "@com_github_spf13_viper//:viper",
    ],
)

go_binary(
    name = "managers",
    embed = [":managers_lib"],
    visibility = ["//visibility:public"],
)
