load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "constants",
    srcs = ["constants.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/backend/lib/constants",
    visibility = ["//visibility:public"],
)

go_library(
    name = "globalConstants",
    srcs = ["constants.go"],
    importpath = "",
    visibility = ["//visibility:public"],
)
