load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "addresses_lib",
    srcs = ["main.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/backend/services/addresses",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/lib/database",
        "//backend/services/addresses/app/service",
        "//backend/services/addresses/app/transport",
        "//backend/services/addresses/config",
        "@com_github_spf13_viper//:viper",
    ],
)

go_binary(
    name = "addresses",
    embed = [":addresses_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_docker_image",
    embed = [":addresses_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

container_image(
    name = "docker",
    base = ":go_docker_image",
)

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_grigoryevandrey_logistics_app//backend/lib/database:go_default_library",
        "@com_github_grigoryevandrey_logistics_app//backend/services/addresses/app/service:go_default_library",
        "@com_github_grigoryevandrey_logistics_app//backend/services/addresses/app/transport:go_default_library",
        "@com_github_grigoryevandrey_logistics_app//backend/services/addresses/config:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
