load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "auth_lib",
    srcs = ["main.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/backend/services/auth",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/lib/database",
        "//backend/services/auth/app/service",
        "//backend/services/auth/app/transport",
        "//backend/services/auth/config",
        "@com_github_spf13_viper//:viper",
    ],
)

go_binary(
    name = "auth",
    embed = [":auth_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_docker_image",
    embed = [":auth_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

container_image(
    name = "docker",
    base = ":go_docker_image",
)

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_grigoryevandrey_logistics_app//backend/lib/database:go_default_library",
        "@com_github_grigoryevandrey_logistics_app//backend/services/auth/app/service:go_default_library",
        "@com_github_grigoryevandrey_logistics_app//backend/services/auth/app/transport:go_default_library",
        "@com_github_grigoryevandrey_logistics_app//backend/services/auth/config:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
