load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@io_bazel_rules_docker//go:image.bzl", "go_image")
load("@io_bazel_rules_docker//container:container.bzl", "container_image")

go_library(
    name = "vehicles_lib",
    srcs = ["main.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/backend/services/vehicles",
    visibility = ["//visibility:private"],
    deps = [
        "//backend/lib/database",
        "//backend/services/vehicles/app/service",
        "//backend/services/vehicles/app/transport",
        "//backend/services/vehicles/config",
        "@com_github_spf13_viper//:viper",
    ],
)

go_binary(
    name = "vehicles",
    embed = [":vehicles_lib"],
    visibility = ["//visibility:public"],
)

go_image(
    name = "go_docker_image",
    embed = [":vehicles_lib"],
    goarch = "amd64",
    goos = "linux",
    pure = "on",
)

container_image(
    name = "docker",
    base = ":go_docker_image",
)

go_library(
    name = "lib",
    srcs = ["main.go"],
    importpath = "",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_grigoryevandrey_logistics_app//backend/lib/database:go_default_library",
        "@com_github_grigoryevandrey_logistics_app//backend/services/vehicles/app/service:go_default_library",
        "@com_github_grigoryevandrey_logistics_app//backend/services/vehicles/app/transport:go_default_library",
        "@com_github_grigoryevandrey_logistics_app//backend/services/vehicles/config:go_default_library",
        "@com_github_spf13_viper//:go_default_library",
    ],
)
