load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "auth",
    srcs = ["auth.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/lib/middlewares/auth",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/constants",
        "//lib/middlewares/auth/models",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_golang_jwt_jwt//:jwt",
        "@com_github_spf13_viper//:viper",
    ],
)
