load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "json",
    srcs = ["json.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/backend/lib/middlewares/json",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)

go_library(
    name = "jsonmw",
    srcs = ["json.go"],
    importpath = "",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gin_gonic_gin//:go_default_library"],
)
