load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/services/admins/app/service",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/constants",
        "//lib/errors",
        "//services/admins/app",
        "@org_golang_x_crypto//bcrypt",
    ],
)
