load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/services/drivers/app/service",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/errors",
        "//services/drivers/app",
    ],
)
