load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = ["middleware.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/services/managers/app/middleware",
    visibility = ["//visibility:public"],
    deps = ["@com_github_gin_gonic_gin//:gin"],
)
