load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "transport",
    srcs = ["transport.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/services/vehicles/app/transport",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/constants",
        "//lib/errors",
        "//lib/middlewares/auth",
        "//lib/middlewares/json",
        "//lib/middlewares/restrictions",
        "//services/vehicles/app",
        "@com_github_gin_gonic_gin//:gin",
        "@in_gopkg_validator_v2//:validator_v2",
    ],
)
