load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/backend/services/addresses/app/service",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/lib/constants",
        "//backend/lib/errors",
        "//backend/services/addresses/app",
    ],
)
