load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = ["service.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/backend/services/auth/app/service",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/lib/constants",
        "//backend/lib/errors",
        "//backend/services/auth/app",
        "//backend/services/auth/app/constants",
        "@com_github_golang_jwt_jwt//:jwt",
        "@com_github_spf13_viper//:viper",
        "@org_golang_x_crypto//bcrypt",
    ],
)
