load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "transport",
    srcs = ["transport.go"],
    importpath = "github.com/grigoryevandrey/logistics-app/backend/services/auth/app/transport",
    visibility = ["//visibility:public"],
    deps = [
        "//backend/lib/errors",
        "//backend/lib/middlewares/auth",
        "//backend/lib/middlewares/json",
        "//backend/services/auth/app",
        "//backend/services/auth/app/constants",
        "@com_github_gin_gonic_gin//:gin",
        "@in_gopkg_validator_v2//:validator_v2",
    ],
)
